@@ -105,6 +105,11 @@ had problems because with them allocation and initialization was separated and
 the GC could sometimes observe half initialized cells.  Only careful coding by
 the user of SCM_NEWCELL and SCM_NEWCELL2 could make this safe and efficient.
 
+** CHECK_ENTRY, CHECK_APPLY and CHECK_EXIT have been deprecated.
+
+Use the variables scm_check_entry_p, scm_check_apply_p and scm_check_exit_p
+instead.
+
 ** Removed definitions:  scm_lisp_nil, scm_lisp_t, s_nil_ify, scm_m_nil_ify,
 s_t_ify, scm_m_t_ify, s_0_cond, scm_m_0_cond, s_0_ify, scm_m_0_ify, s_1_ify,
 scm_m_1_ify, scm_debug_newcell,	scm_debug_newcell2, scm_tc16_allocated,
